--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
 <html>
+<head>
+	<title>App</title>
+</head>
 <body>
-<div id='app'></div>
+<div id='app'>{{{content}}}</div>
+<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
